Add Accomodation information.

--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
         <link rel="stylesheet" href="stylesheets/main.css" />
         <link rel="stylesheet" href="stylesheets/responsive-tables.css" />
         <link rel="shortcut icon" href="http://www.smartgraphics.org/sg09/pictures/favicon.ico" type="image/x-icon" />
+        <!-- Link Font Awesome CSS style file-->
+        <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 
-        <script src="javascripts/vendor/modernizr-2.6.2.min.js"></script>
+            <script src="javascripts/vendor/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
         <!--[if lt IE 8]>
@@ -280,7 +282,7 @@
                         <div class="span6 mobile4">
                             <p>National Chengchi University (NCCU) was founded in 1927. Over the past 8 decades through re-formation and development, we have been upholding our motto, “Harmony, Independence, Balance and Preeminence”, and have continued to refine our teaching methods and research in order to nurture talent for our country and society.</p>
                             <p>More information: <a href="http://www.nccu.edu.tw/?locale=en" target="_blank">National Chengchi University</a></p>
-                            
+
                         </div>
                         <div class="span6 mobile4">
                             <p>
@@ -320,7 +322,7 @@
                         <div class="span12 mobile8">
                             <h3 style="text-align:center">Call for Papers</h3>
                             <p style="text-align:center"><a href="files/sg2014-CFP-flyer.pdf" target="_blank"><img src="images/pdf_downlaod.png"></a><br>
-                                Download as PDF</p>  
+                                    Download as PDF</p>  
                         </div>
                     </div>
                     <div class="row">
@@ -455,6 +457,59 @@
                                 <li>陸客自由行（台湾个人游），適用<a href="https://www.immigration.gov.tw/ct_cert.asp?xItem=1101583&ctNode=32595&mp=1" target="_blank">大陸地區人民來臺從事個人旅遊觀光活動申請須知</a> ，請洽詢當地旅行社相關規定。</li>
                                 <li>在海外留學或工作證明者，適用<a href="https://www.immigration.gov.tw/ct.asp?xItem=1089301&ctNode=30066&mp=1" target="_blank">大陸地區人民自國外或香港澳門來臺從事觀光活動送件須知</a>。</li>
                             </ol>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="span12 mobile8">
+                            <h2>Accomodation</h2>
+                        </div>
+                        <div class="span12 mobile8">
+                            <h3><a href="http://oic.nccu.edu.tw/nccuihouse/scholar_en/intro.html" target="_blank">iHouse <i class="fa fa-external-link"></i></a></h3>
+                            <p><i class="fa fa-home"></i> No.17, Ln. 112, Sec. 2, Xiuming Rd., Wenshan Dist., Taipei City 116, Taiwan (R.O.C.)<br />
+                                <i class="fa fa-phone"></i> 886-2-29368869<br />
+                                <i class="fa fa-envelope"></i> <a href="mailto:ihouse.nccu@gmail.com">ihouse.nccu@gmail.com</a>
+                            </p>
+                            <p>
+                                <table id="schedule-table">
+                                    <thead>
+                                        <tr>
+                                            <th>Room type</th>
+                                            <th>Price</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <th>Double-room</th>
+                                            <td>TWD$1,600 (USD$53.3) per day</td>
+                                        </tr>
+                                        <tr>
+                                            <th>Family Suite</th>
+                                            <td>TWD$1,728 (USD$57.6) per day</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                                <strong>SG14 reserve a limited number of rooms for attendees, please <a href="mailto:mtchi@cs.nccu.edu.tw">contact us</a> to book iHouse.</strong></p>
+                        </div>
+                        <div class="span12 mobile8">
+                            <h3><a href="http://www.justsleep.com.tw/NTU/en" target="_blank">JustSleep@NTU <i class="fa fa-external-link"></i></a></h3>
+                            <p><i class="fa fa-home"></i> No. 83, Sec. 4, Roosevelt Rd., Taipei 10673, Taiwan (R.O.C.)<br />
+                                <i class="fa fa-phone"></i> 886-2-77355000<br />
+                                <i class="fa fa-envelope"></i> <a href="mailto:rsvn@justsleep.com.tw">rsvn@justsleep.com.tw</a>
+                            </p>
+                            <p><a href="files/sg2014_Reservation_Form.pdf"><img src="images/pdf_downlaod_s.png"/> The 12th International Symposium on Smart Graphics Reservation Form</a></p>
+                        </div>
+                        <div class="span12 mobile8">
+                            <h3><a href="https://booking.taiwantravelmap.tw/user/booking.aspx?m=17&lg=en" target="_blank">In-Stone Hotel <i class="fa fa-external-link"></i></a></h3>
+                            <p><i class="fa fa-home"></i> No.15, Sec. 2, Xiuming Rd., Wenshan Dist., Taipei City 116, Taiwan (R.O.C.)<br />
+                                <i class="fa fa-phone"></i> 886-2-86617070
+                            </p>
+                        </div>
+                        <div class="span12 mobile8">
+                            <h3><a href="http://www.holidayinntpe.com.tw/eng/news.php" target="_blank">Holiday Inn East Taipei <i class="fa fa-external-link"></i></a></h3>
+                            <p><i class="fa fa-home"></i> No. 265, Sec. 3, Beishen Rd., Shenkeng Dist., New Taipei City 222, Taiwan (R.O.C.)<br />
+                                <i class="fa fa-phone"></i> 886-2-26628000<br />
+                                <i class="fa fa-envelope"></i>: <a href="mailto:rsvn@hietpe.com">rsvn@hietpe.com</a>
+                            </p>
                         </div>
                     </div>
                 </div>
