Open registration area.

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                                 <h2>test</h2>
                             </header>
                             <p>
-                                <a href="files/sg2014-CFP-flyer.pdf" class="button normal middle" target="_blank"><img src="images/pdf_downlaod_s.png"/> Acceptance Notified.</a>
+                                <a href="#regist" class="button normal middle"><strong>Registration available</strong></a>
                             </p>
                         </div>
                     </div>
@@ -416,7 +416,7 @@
                     <div class="row">
                         <div class="span12 mobile8">
                             <h2>Registration</h2>
-                            <h3>Registration will be open shortly.</h3>
+                            <h3>The registration service is now available. Please follow the external link <a href="http://imlab1.cs.nccu.edu.tw/sg2014/" target="_blank">HERE</a> for the service.</h3>
                             <p>Registration fee:</p>
                             <table id="schedule-table">
                                 <thead>
@@ -439,7 +439,7 @@
                                     </tr>
                                 </tbody>
                             </table>
-                            <p>If there are any payment problem with registration,  feel free to contact Ms. Lai by Phone: +886-2-3366-4888 ext.503 or Email: <a href="mailto:june@cmlab.csie.ntu.edu.tw">june@cmlab.csie.ntu.edu.tw</a>.<br>繳費若有任何問題，請致電 (02)33664888 轉 503 賴小姐，或 Email至 <a href="mailto:june@cmlab.csie.ntu.edu.tw">june@cmlab.csie.ntu.edu.tw</a>。</p>
+                            <p><strong>If you encounter any problems about the payment charge, please feel free to <a href="mailto:deepviator@gmail.com" target="_blank">contact us</a> (<a href="mailto:deepviator@gmail.com" target="_blank">deepviator@gmail.com</a>).</strong></p>
                         </div>
                     </div>
                     <div class="row">
@@ -465,11 +465,8 @@
                         </div>
                         <div class="span12 mobile8">
                             <h3><a href="http://oic.nccu.edu.tw/nccuihouse/scholar_en/intro.html" target="_blank">iHouse <i class="fa fa-external-link"></i></a></h3>
-                            <p><i class="fa fa-home"></i> No.17, Ln. 112, Sec. 2, Xiuming Rd., Wenshan Dist., Taipei City 116, Taiwan (R.O.C.)<br />
-                                <i class="fa fa-phone"></i> 886-2-29368869<br />
-                                <i class="fa fa-envelope"></i> <a href="mailto:ihouse.nccu@gmail.com">ihouse.nccu@gmail.com</a>
-                            </p>
                             <p>
+                                <strong>iHouse offers a limited number of rooms with special rates for SG2014 attendees, please <a href="mailto:mtchi@cs.nccu.edu.tw">contact us</a> for booking.</strong>
                                 <table id="schedule-table">
                                     <thead>
                                         <tr>
@@ -488,9 +485,14 @@
                                         </tr>
                                     </tbody>
                                 </table>
-                                <strong>SG14 reserve a limited number of rooms for attendees, please <a href="mailto:mtchi@cs.nccu.edu.tw">contact us</a> to book iHouse.</strong></p>
+                                </p>
+                            <p><i class="fa fa-home"></i> No.17, Ln. 112, Sec. 2, Xiuming Rd., Wenshan Dist., Taipei City 116, Taiwan (R.O.C.)<br />
+                                <i class="fa fa-phone"></i> 886-2-29368869<br />
+                                <i class="fa fa-envelope"></i> <a href="mailto:ihouse.nccu@gmail.com">ihouse.nccu@gmail.com</a>
+                            </p>
                         </div>
                         <div class="span12 mobile8">
+                            <hr />
                             <h3><a href="http://www.justsleep.com.tw/NTU/en" target="_blank">JustSleep@NTU <i class="fa fa-external-link"></i></a></h3>
                             <p><i class="fa fa-home"></i> No. 83, Sec. 4, Roosevelt Rd., Taipei 10673, Taiwan (R.O.C.)<br />
                                 <i class="fa fa-phone"></i> 886-2-77355000<br />
