Add second keynote speaker biography and modify accomodation information on triple-room.

--- a/index.html
+++ b/index.html
@@ -304,13 +304,27 @@
                     </div>
                     <div class="row">
                         <div class="span12 mobile8">
-                        <h2>Keynote</h2>    
+                        <h2>Keynote Speaker</h2>    
                         </div>
                         <div class="span3 mobile2">
                             <p style="text-align: center;"><img class="avatar" src="images/kss.jpg"></p><p style="text-align: center;"><strong>Karan Singh</strong></p>
                         </div>
                         <div class="span9 mobile6">
                             <p>Karan Singh is a Professor of Computer Science at the University of Toronto. He holds a BTech. from IIT Madras and MS/PhD from the Ohio State University, in Computer Science. His research interests lie in art and perception driven interactive graphics spanning geometric design and fabrication, anatomic modeling, character animation, painterly rendering and mobile computing. He has been a technical lead on two commercial software projects that have won technical Oscars including Maya (the industry standard for 3D animation) and is a co-founder of Arcestra, a solution for architecture layout and visualization. He co-directs a reputed graphics and HCI lab, DGP <a href="http://www.dgp.toronto.edu/">www.dgp.toronto.edu <i class="fa fa-external-link"></i></a>. He was the R&D Director for the 2005 Oscar winning animated short Ryan and had an exhibition of electronic art titled Labyrinths, in 2010 <a href="http://www.karanshersingh.com/">www.karanshersingh.com <i class="fa fa-external-link"></i></a>.</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="span12 mobile8">
+                            <hr>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="span3 mobile2">
+                            <p style="text-align: center;"><img class="avatar" src="images/takeo.jpg"></p><p style="text-align: center;"><strong>Takeo Igarashi</strong></p>
+                        </div>
+                        <div class="span9 mobile6">
+                            <p><a href="http://www-ui.is.s.u-tokyo.ac.jp/~takeo/" target="_blank">Takeo Igarashi <i class="fa fa-external-link"></i></a> is a professor at CS department, the University of Tokyo.
+                            He received PhD from Dept of Information Engineering, the University of Tokyo in 2000. His research interest is in user interface in general and current focus is on interaction techniques for 3D graphics. He is known as the inventor of sketch-based modeling system called Teddy, and received The Significant New Researcher Award at SIGGRAPH 2006.</p>
                         </div>
                     </div>
                 </div>
@@ -486,7 +500,7 @@
                                             <td>TWD$1,600 (USD$53.3) per day</td>
                                         </tr>
                                         <tr>
-                                            <th>Family Suite</th>
+                                            <th>Triple-room</th>
                                             <td>TWD$1,728 (USD$57.6) per day</td>
                                         </tr>
                                     </tbody>
