Add transprotation information.

--- a/index.html
+++ b/index.html
@@ -290,6 +290,48 @@
                         </div>
                     </div>
                     <div id="map_canvas"></div>
+                    <div class="row">
+                        <div class="span12 mobile8">
+                            <hr>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <h2>Transportation</h2>
+                    </div>
+                    <div class="row">
+                        <div class="span12 mobile8">
+                            <p style="text-align:center"><a href="files/sg2014_Transportation.pdf" target="_blank"><img src="images/pdf_downlaod.png"><br>
+                                    Download as PDF</a></p> 
+                            <p>The conference sessions of Smart Graphics 2014 will be held at National Chengchi University (NCCU) in Taipei. The address of NCCU is 64, Sec. 2, Zhi-nan Rd, Wenshan District, Taipei City.  Here we provide some information for how to get to the university from the airport and local transportation.</p>
+                        </div>
+                        <div class="span12 mobile8">
+                            <h3>Airport transportation</h3>
+                            <p>The major international airport (TPE) is located in the Taoyuan county. For international travelers, especially those visiting Taipei the first time, taxi is the easiest and recommended transportation from the TPE international airport to NCCU or your hotel. The fare is around US$40-50, and it takes about 40-70 minutes to get to Taipei, depending on the specific destination and the traffic. Please refer to the link (<a href="http://www.taoyuan-airport.com/english/taxi" target="_blank">http://www.taoyuan-airport.com/english/taxi <i class="fa fa-external-link"></i></a>) for how to access the airport taxi service.</p>
+                            <p>If you’re looking for options of public transportation, you may consider taking <a href="http://www.taoyuan-airport.com/english/Buses/" target="_blank">buses <i class="fa fa-external-link"></i></a> or <a href="http://www.taoyuan-airport.com/english/hight-speed-rail" target="_blank">high-speed rail <i class="fa fa-external-link"></i></a> to go  to the Taipei Main Station first. Then from Taipei Main Station, you can take taxi or MRT to get to your hotel or NCCU.</p>
+                        </div>
+                        <div class="span12 mobile8">
+                            <h3>Translations of destinations for taxi</h3>
+                            <p>While most of the taxi drivers in the airport and in Taipei should be able to communicate with international visitors in English regarding where to go. For your convenience, here are the Chinese translations of some possibly common English instructions to the taxi drivers. You may want to print them out or show them on your mobile devices in order to tell the driver where you’d like to go.</p>
+                            <p>English: “Please take me to NCCU in Taipei”<br>
+                                    Chinese: “請帶我到台北的國立政治大學</p>
+                            <p>English: “Please take me to the JustSleep@NTU hotel in Taipei”<br>
+                                    Chinese: “請帶我到台北市羅斯福路四段83號台大捷絲旅飯店”</p>
+                            <p>English: “Please take me to the In-Stone hotel in Taipei”<br>
+                                    Chinese: “請帶我到台北市文山區秀明路二段15號 印石時尚旅館”</p>
+                            <p>English: “Please take me to Holiday Inn East Taipei”<br>
+                                    Chinese: “請帶我到新北市深坑區北深路三段265號 假日飯店”</p>
+                            <p>English: “Please take me to the Taipei Zoo MRT Station”<br>
+                                    Chinese: “請帶我到捷運動物園站”</p>
+                            <p>English: “Please take me to the Taipei Main Station (MRT & Railway)”<br>
+                                    Chinese: “請帶我到台北車站”</p>
+                            <p>If you can't see the chinese characters, please download this <a href="files/sg2014_transportation.jpg" target="_blank">image <i class="fa fa-picture-o"></i></a>, thanks!</p>
+                        </div>
+                        <div class="span12 mobile8">
+                            <h3>Local transportation</h3>
+                            <p>The public transportation system of Taipei consists of the Metropolitan Rapid Transit (MRT) and numerous bus routes. Taipei MRT should serve most of your intra-Taipei transportation need. For the route map and fare info, please refer to the Metro Guide provided by the <a href="http://english.trtc.com.tw/np.asp?ctNode=49778&mp=122032" target="_blank">MRT <i class="fa fa-external-link"></i></a>.</p>
+                            <p>To go outside of Taipei, the Taiwan High-Speed Railway system transports passengers from Taipei to Kaohsiung (the other major city in southern Taiwan) in 1.5 hours. Please find the routes and additional info provided by <a href="http://www5.thsrc.com.tw/en/" target="_blank">THSR <i class="fa fa-external-link"></i></a>.</p>
+                        </div>
+                    </div>
                 </div>
             </section>
             <section id="schedule" class="section_orange attach_arrow_white">
