Remove 'tentative' and change one commitee's school.

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                     </div>
                     <div class="row">
                         <div class="span4 mobile3">
-                            <h3 style="text-align: right">Program Committee (tentative)</h3>
+                            <h3 style="text-align: right">Program Committee</h3>
                         </div>
                         <div class="span8 mobile5">
                             <div style="border-left: #000 solid 1px">
@@ -191,7 +191,7 @@
                         <div class="span8 mobile5">
                             <div style="border-left: #000 solid 1px">
                                 <ul>
-                                    <li>Chun-Feng Liao (Feng-Chia University, Taiwan)</li>
+                                    <li>Chun-Feng Liao (National Chengchi University, Taiwan)</li>
                                     <li>Hao-Chuan Wang (National Tsing-Hua Univeristy, Taiwan)</li>
                                     <li>Ming-Te Chi (National Chengchi University,Taiwan)</li>
                                     <li>Neng-Hao Yu (National Chengchi University,Taiwan)</li>
