Add Art Exhibition list and change program at first night.

--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
                                     </tr>
                                     <tr>
                                         <th>18:30 -<br/>21:00</th>
-                                        <td>Social Event</td>
+                                        <td>Welcome Reception</td>
                                         <td>Banquet</td>
                                     </tr>
                                 </tbody>
@@ -567,8 +567,17 @@
                                     <div class="time">16:00-17:30, Aug. 27</div>
                                     <div class="topic">The Grandmaster – Installation and Rhythm-action flash game </div>
                                     <div class="author"><span><i class="fa fa-user"></i> Cheung Ho Yin</span><span><i class="fa fa-user"></i> Tse Kwok Piu</span><span><i class="fa fa-user"></i> Shek Chung Hong</span><span><i class="fa fa-user"></i> Ting Ho Yee</span><br/><span><i class="fa fa-user"></i> So Sin Ying</span><span><i class="fa fa-user"></i> Tam Nga Man</span><span><i class="fa fa-user"></i> Ho Chun Hin</span></div>
-                                    <p><a class="artex" href="art_exhibition.html">More Information</a></p>
-                                    <p style="text-align: right;">More interactive art exhibitions will be announced later.</p>
+                                    <div class="topic">Dancing Tree</div>
+                                    <div class="author"><span><i class="fa fa-user"></i> Hsing Huang</span> <span><i class="fa fa-user"></i> Kelly Tsai</span> <span><i class="fa fa-user"></i> Hao-Yun Lo</span> <span><i class="fa fa-user"></i> An-Ting Lee</span></div>
+                                    <div class="topic">The Wind Story</div>
+                                    <div class="author"><span><i class="fa fa-user"></i> Yi-ying Lin</span> <span><i class="fa fa-user"></i>Chi-hui Yao</span> <span><i class="fa fa-user"></i>You-jie Lin</span> <span><i class="fa fa-user"></i>Jie-yao Jin</span> <span><i class="fa fa-user"></i>Zhen-sheng Liu</span></div>
+                                    <div class="topic">The Shadow of the Words</div>
+                                    <div class="author"><span><i class="fa fa-user"></i> Pei-Ling Ho</span> <span><i class="fa fa-user"></i>Chi-Yun Tseng</span> <span><i class="fa fa-user"></i>Yu-Hsuan Lin</span> <span><i class="fa fa-user"></i>Kuan Lin</span> <span><i class="fa fa-user"></i>Yi-Ting Lee</span> <span><i class="fa fa-user"></i>Yu-Hsiang Lin</span> <span><i class="fa fa-user"></i>Lin-Xi Li</span></div>
+                                    <div class="topic">FreeBike</div>
+                                    <div class="author"><span><i class="fa fa-user"></i> Lin-Ting Hung</span> <span><i class="fa fa-user"></i>Tseng-Tzu Ning</span> <span><i class="fa fa-user"></i>Wang-Hsin Ying</span> <span><i class="fa fa-user"></i>Lin-Ching An</span> <span><i class="fa fa-user"></i>Fang-Sing Yu</span> <span><i class="fa fa-user"></i>Lai-Chun Yi</span> <span><i class="fa fa-user"></i>Ju-Li An</span></div>
+                                    <div class="topic">Digiti Sonus</div>
+                                    <div class="author"><span><i class="fa fa-user"></i> Yoon-Chung Han</span> <span><i class="fa fa-user"></i>Byeong-jun Han</span></div>
+                                    <p style="text-align: right;"><a class="artex" href="art_exhibition.html">More Detail...</a></p>
                                     <hr/>
                                     <a href="#program2014" style="color: #3f5666;"><i class="fa fa-chevron-circle-up"></i> Back to Program</a>
                                 </div>
