Add information of Welcome Reception and Banquet.

--- a/index.html
+++ b/index.html
@@ -336,12 +336,17 @@
                         </div>
                     </div>
                     <div class="row">
+                        <div class="span12 mobile8">
+                            <hr>
+                        </div>
+                    </div>
+                    <div class="row">
                         <h2>Campus</h2>
                     </div>
                     <div class="row">
                         <div class="span12 mobile8">
                             <p><b>Drivers</b> please follow the direction of <b>yellow</b> line.<br />
-                            <b>Pedestrians</b> please follow the direction of <b>orange</b> line.</p>
+                                <b>Pedestrians</b> please follow the direction of <b>orange</b> line.</p>
                             <img src="images/campus_map.png" style="width: 100%;" />
                         </div>
                     </div>
@@ -444,8 +449,8 @@
                                     </tr>
                                     <tr>
                                         <th>18:30 -<br/>21:00</th>
-                                        <td>Welcome Reception</td>
-                                        <td>Banquet</td>
+                                        <td><a class="dark-purple" href="#welcome">Welcome Reception <i class="fa fa-external-link"></i></a></td>
+                                        <td><a class="dark-purple" href="#banquet">Banquet <i class="fa fa-external-link"></i></a></td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -575,9 +580,43 @@
                                     <div class="author"><span><i class="fa fa-user"></i> Pei-Ling Ho</span> <span><i class="fa fa-user"></i>Chi-Yun Tseng</span> <span><i class="fa fa-user"></i>Yu-Hsuan Lin</span> <span><i class="fa fa-user"></i>Kuan Lin</span> <span><i class="fa fa-user"></i>Yi-Ting Lee</span> <span><i class="fa fa-user"></i>Yu-Hsiang Lin</span> <span><i class="fa fa-user"></i>Lin-Xi Li</span></div>
                                     <div class="topic">FreeBike</div>
                                     <div class="author"><span><i class="fa fa-user"></i> Lin-Ting Hung</span> <span><i class="fa fa-user"></i>Tseng-Tzu Ning</span> <span><i class="fa fa-user"></i>Wang-Hsin Ying</span> <span><i class="fa fa-user"></i>Lin-Ching An</span> <span><i class="fa fa-user"></i>Fang-Sing Yu</span> <span><i class="fa fa-user"></i>Lai-Chun Yi</span> <span><i class="fa fa-user"></i>Ju-Li An</span></div>
-                                    <div class="topic">Digiti Sonus</div>
-                                    <div class="author"><span><i class="fa fa-user"></i> Yoon-Chung Han</span> <span><i class="fa fa-user"></i>Byeong-jun Han</span></div>
                                     <p style="text-align: right;"><a class="artex" href="art_exhibition.html">More Detail...</a></p>
+                                    <hr/>
+                                    <a href="#program2014" style="color: #3f5666;"><i class="fa fa-chevron-circle-up"></i> Back to Program</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="welcome" class="row" style="padding-top: 80px;">
+                        <div class="span12 mobile8">
+                            <div class="session-card">
+                                <div class="card-head dark-purple">
+                                    Welcome Reception
+                                </div>
+                                <div class="card-body">
+                                    <h3>Māo Kōng Lóngmén Restaurant （貓空龍門客棧）</h3>
+                                    <p style="text-align: center;"><img src="images/longmen.png" alt=""/></p>
+                                    <p>Time: 18:30-21:00, Aug. 27</p>
+                                    <p>Address: No.2, Aly.22, Ln.38, Sec.3, Zhinan Rd., Wensha Dist.,Taipei City 116</p>
+                                    <iframe width="100%" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com.tw/maps?sll=24.96713,121.586886&amp;sspn=0.0074698,0.0109864&amp;cid=8720050366707161986&amp;q=%E9%BE%8D%E9%96%80%E5%AE%A2%E6%A3%A7&amp;ie=UTF8&amp;hq=&amp;hnear=&amp;t=m&amp;iwloc=A&amp;brcurrent=3,0x346803de3309ff0b:0x28912d7c845b6a29,0,0x345d5538b0b6645f:0x5aa90dfa6620edc0&amp;ll=24.96713,121.586886&amp;spn=0.006295,0.006295&amp;output=embed"></iframe><br /><small><a href="https://maps.google.com.tw/maps?sll=24.96713,121.586886&amp;sspn=0.0074698,0.0109864&amp;cid=8720050366707161986&amp;q=%E9%BE%8D%E9%96%80%E5%AE%A2%E6%A3%A7&amp;ie=UTF8&amp;hq=&amp;hnear=&amp;t=m&amp;iwloc=A&amp;brcurrent=3,0x346803de3309ff0b:0x28912d7c845b6a29,0,0x345d5538b0b6645f:0x5aa90dfa6620edc0&amp;ll=24.96713,121.586886&amp;spn=0.006295,0.006295&amp;source=embed" style="color:#0000FF;text-align:left">顯示詳細地圖</a></small>
+                                    <hr/>
+                                    <a href="#program2014" style="color: #3f5666;"><i class="fa fa-chevron-circle-up"></i> Back to Program</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="banquet" class="row" style="padding-top: 80px;">
+                        <div class="span12 mobile8">
+                            <div class="session-card">
+                                <div class="card-head dark-purple">
+                                    Banquet
+                                </div>
+                                <div class="card-body">
+                                    <h3>Sōngyuán Chánlín（松園禪林）</h3>
+                                    <p style="text-align: center;"><img src="images/songyuan.png" alt=""/></p>
+                                    <p>Time: 18:30-21:00, Aug. 28</p>
+                                    <p>Address: No.160, Aly. 101, Jingshan Rd., Shilin Dist.,Taipei City 111</p>
+                                    <iframe width="100%" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com.tw/maps?f=q&amp;source=s_q&amp;hl=zh-TW&amp;geocode=&amp;q=%E5%8F%B0%E5%8C%97%E5%B8%82%E5%A3%AB%E6%9E%97%E5%8D%80%E8%8F%81%E5%B1%B1%E8%B7%AF101%E5%B7%B7160%E8%99%9F%E6%9D%BE%E5%9C%92&amp;aq=0&amp;oq=%E6%9D%BE%E5%9C%92&amp;sll=24.96713,121.586886&amp;sspn=0.015017,0.025406&amp;brcurrent=3,0x3442b11620cdabf1:0x33fed2377fc79368,0,0x345d5538b0b6645f:0x5aa90dfa6620edc0&amp;ie=UTF8&amp;hq=%E6%9D%BE%E5%9C%92&amp;hnear=111%E5%8F%B0%E5%8C%97%E5%B8%82%E5%A3%AB%E6%9E%97%E5%8D%80%E8%8F%81%E5%B1%B1%E8%B7%AF101%E5%B7%B7160%E8%99%9F&amp;ll=25.160273,121.566092&amp;spn=0.007497,0.012703&amp;t=m&amp;z=14&amp;iwloc=A&amp;cid=1721318388335016534&amp;output=embed"></iframe><br /><small><a href="https://maps.google.com.tw/maps?f=q&amp;source=embed&amp;hl=zh-TW&amp;geocode=&amp;q=%E5%8F%B0%E5%8C%97%E5%B8%82%E5%A3%AB%E6%9E%97%E5%8D%80%E8%8F%81%E5%B1%B1%E8%B7%AF101%E5%B7%B7160%E8%99%9F%E6%9D%BE%E5%9C%92&amp;aq=0&amp;oq=%E6%9D%BE%E5%9C%92&amp;sll=24.96713,121.586886&amp;sspn=0.015017,0.025406&amp;brcurrent=3,0x3442b11620cdabf1:0x33fed2377fc79368,0,0x345d5538b0b6645f:0x5aa90dfa6620edc0&amp;ie=UTF8&amp;hq=%E6%9D%BE%E5%9C%92&amp;hnear=111%E5%8F%B0%E5%8C%97%E5%B8%82%E5%A3%AB%E6%9E%97%E5%8D%80%E8%8F%81%E5%B1%B1%E8%B7%AF101%E5%B7%B7160%E8%99%9F&amp;ll=25.160273,121.566092&amp;spn=0.007497,0.012703&amp;t=m&amp;z=14&amp;iwloc=A&amp;cid=1721318388335016534" style="color:#0000FF;text-align:left">顯示詳細地圖</a></small>
                                     <hr/>
                                     <a href="#program2014" style="color: #3f5666;"><i class="fa fa-chevron-circle-up"></i> Back to Program</a>
                                 </div>
